<resources>
    <string name="app_name">BraAppAdmin</string>
    <string name="todo" />
    <string name="descr">Modifica y platica con los usuarios de BraApp Tutor y BraApp Alumno.</string>
    <string name="bienvenido_administrador">Bienvenido Administrador</string>
    <string name="olvide_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="cambio_de_contrase_a">Cambio de Contraseña</string>
    <string name="restablecer">Restablecer</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="nota_musical_1">Nota Musical 1</string>
    <string name="volumen">Volumen:</string>
    <string name="nota_musical_2">Nota Musical 2</string>
    <string name="tono_o_canci_n">Tono o Canción</string>
    <string name="flechas">Flechas</string>
    <string name="ajustes">Ajustes</string>
    <string name="melodia">Melodía:</string>
    <string name="control_de_volumen">Control de Volumen</string>
    <string name="quot_gracias_aquellas_personas_que_nos_apoyaron_y_ayudaron_a_continuar_con_este_proyecto_esperamos_que_este_proyecto_siga_creciendo_con_ustedes_gracias_por_todo_quot">\"Gracias aquellas personas que nos apoyaron y ayudaron a continuar con este proyecto. Esperamos que este proyecto siga creciendo con ustedes. Gracias por todo.\"</string>
    <string name="quot_no_te_olvides_de_seguirnos_apoyando_en_nuestras_redes_sociales_quot">\"No te olvides de seguirnos apoyando en nuestras redes sociales.\"</string>
    <string name="ing_arely_vanessa_romero_clemente">Ing. Arely Vanessa Romero Clemente</string>
    <string name="director_general">Director General</string>
    <string name="ing_alejandro_lim_n_t_llez">Ing. Alejandro Limón Téllez</string>
    <string name="gerente_general">Gerente General</string>
    <string name="_06_septiembre_2021">28/Septiembre/2022</string>
    <string name="problematica">Problemática</string>
    <string name="alumno">Alumno</string>
    <string name="construcci_n_rompecabezas">Construcción Rompecabezas</string>
    <string name="administrador">Administrador</string>
    <string name="utilidad">Utilidad</string>
    <string name="construcci_n_memorama">Construcción Memorama</string>
    <string name="tutor">Tutor</string>
    <string name="todo1">Todo</string>
    <string name="respondido">Respondido</string>
    <string name="minisculas_y_mayusculas">Minúsculas y Mayúsculas</string>
    <string name="presi">presi</string>
    <string name="user">user</string>
    <string name="code">code</string>
    <string name="_25_7_2022_01_37_14">25/7/2022 01:37:14</string>
    <string name="se_guardo_este_ejemplo">se guardó este ejemplo</string>
    <string name="fecha">Fecha:</string>
    <string name="acci_n">Acción:</string>
    <string name="ver_mas">Ver más...</string>
    <string name="elimine_la_foto_antes_de_volver_a_subir_otra">Elimine la foto antes de volver a subir otra.</string>
    <string name="name">name</string>
    <string name="usuario">Usuario:</string>
    <string name="chat">Chat</string>
    <string name="comunidad">Comunidad</string>
    <string name="avisos">Avisos</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="productos">Productos</string>
    <string name="hora_de_respuesta">Hora de Respuesta:</string>
    <string name="link_de_video">Link de Video:</string>
    <string name="formato_aceptado">Formato Aceptado:</string>
    <string name="ejemplo_empleando_el_formato_aceptado">Ejemplo empleando el formato aceptado:</string>
    <string name="registro_de_administrador">Registro de Administrador</string>
    <string name="contrase_a_6_10_min_max">Contraseña 6-10(Min-Max)</string>
    <string name="links_v2">Links V2</string>
    <string name="mediafire">MediaFire:</string>
    <string name="mega">Mega:</string>
    <string name="link">Link</string>
    <string name="servidor_2">Servidor 2:</string>
    <string name="servidor_1">Servidor 1:</string>
    <string name="pesos">$</string>
    <string name="playstore">PlayStore:</string>
    <string name="codigos_qr">Códigos QR:</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="nombre_del_producto">Nombre del Producto:</string>
    <string name="nombre_del_producto1">Nombre del Producto</string>
    <string name="costo">Costo:</string>
    <string name="sitio">Sitio:</string>
    <string name="sitio1">Sitio</string>
    <string name="link_de_acceso">Link de acceso:</string>
    <string name="link1">link</string>
    <string name="sitio_de_compra">Sitio de Compra:</string>
    <string name="facebook">Facebook</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre1">Nombre</string>
    <string name="buscar">Buscar</string>
    <string name="men_principal">Menú Principal</string>
    <string name="comunicaci_n">Comunicación</string>
    <string name="avisos_comunidad_y_chat">Avisos, Comunidad y Chat.</string>
    <string name="galeria">Galería</string>
    <string name="sliders_de_pagina_web">Sliders de Página Web.</string>
    <string name="catalogo">Catálogo</string>
    <string name="links_de_descarga_link_de_pagina_y_redes_sociales">Links de descarga, link de página y Redes Sociales .</string>
    <string name="respuestas_de_juegos">Respuestas de juegos.</string>
    <string name="informaci_n_del_uso_de_los_usuarios">Información del uso de los usuarios.</string>
    <string name="productos_recomendaciones_y_productos_similares">Productos, Recomendaciones y Productos Similares.</string>
    <string name="videos">Videos</string>
    <string name="videos_de_pagina_web">Videos de Página Web.</string>
    <string name="documentos">Documentos</string>
    <string name="documentos_de_la_pagina_web">Documentos de la Página Web.</string>
    <string name="fotografia">Fotografía:</string>
    <string name="titulo">Título:</string>
    <string name="titulo1">Título</string>
    <string name="descripci_n">Descripción:</string>
    <string name="foto">Foto</string>
    <string name="descripci_n1">Descripción</string>
    <string name="guardar1">Guardar</string>
    <string name="productos_similares">Productos Similares</string>
    <string name="guardar">Guardar</string>
    <string name="accesos">Accesos</string>
    <string name="extras">Extras</string>
    <string name="_1111">1111</string>
    <string name="logs">Logs</string>
    <string name="escuelas">Escuelas</string>
    <string name="nuevo_documento">Nuevo Documento</string>
    <string name="nombre_del_documento">Nombre del Documento:</string>
    <string name="nombre_del_documento1">Nombre del Documento</string>
    <string name="archivo_docx">Archivo DOCX:</string>
    <string name="archivo_en_docx">Archivo en Docx</string>
    <string name="archivo_doc">Archivo DOC:</string>
    <string name="archivo_doc1">Archivo DOC</string>
    <string name="archivo_pdf">Archivo PDF:</string>
    <string name="archivo_pdf1">Archivo Pdf</string>
    <string name="limpiar">Limpiar</string>
    <string name="aparece">Aparece:</string>
    <string name="funci_n">Función:</string>
    <string name="desea_realmente_eliminar_todos_los_avisos_recibidos">¿Desea realmente eliminar todos los avisos recibidos?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="todos_los_mensajes">Todos los Mensajes</string>
    <string name="en_espera">En Espera...</string>
    <string name="mensaje">Mensaje</string>
    <string name="con_respuesta">Con Respuesta...</string>
    <string name="clave_1111">Clave: 1111</string>
    <string name="volumen_de_tonos">Volumen de Tonos</string>
    <string name="volumen_de_melodias">Volumen de Melodías</string>

</resources>
