<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#B0365A98"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               >

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">

                   <TextView
                       android:id="@+id/cods"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="20sp"
                       android:fontFamily="@font/gentium_book_basic_bold"
                       android:text="@string/code"
                       android:textColor="@color/colorAccent"
                       android:textSize="20sp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       tools:ignore="MissingConstraints" />

                   <TextView
                       android:id="@+id/fecha1s"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="12dp"
                       android:fontFamily="@font/gentium_book_basic_bold"
                       android:text="@string/_25_7_2022_01_37_14"
                       android:textColor="@color/purple_500"
                       android:textSize="16sp"
                       android:textStyle="bold"
                       app:layout_constraintBottom_toTopOf="@+id/accion"
                       app:layout_constraintEnd_toEndOf="@+id/accion"
                       app:layout_constraintStart_toEndOf="@+id/cods"
                       app:layout_constraintTop_toTopOf="parent"
                       tools:ignore="MissingConstraints" />

                   <TextView
                       android:id="@+id/accion"
                       android:layout_width="250sp"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/gentium_book_basic_bold"
                       android:text="@string/se_guardo_este_ejemplo"
                       android:textColor="#000000"
                       android:textSize="25sp"
                       android:paddingStart="20sp"
                       android:layout_marginRight="150sp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/cods" />
               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="136dp"
        android:layout_height="154dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoringa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logopa" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>