<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".inicio.Splash">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="332dp"
        android:layout_height="433dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logoadmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/gentium_book_basic"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/punto"
        android:layout_width="419dp"
        android:layout_height="509dp"
        android:layout_gravity="center"
        android:layout_marginTop="432dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/mano"
        tools:ignore="MissingClass" />

    <TextView
        android:id="@+id/tema3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gentium_book_basic"
        android:text="@string/descr"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tema" />
    <ImageView
        android:id="@+id/image2"
        android:layout_width="208dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/versiones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>